# gitlab2rbac

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  gitlab2rbac.py  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
deploy/: configuration.yaml  gitlab2rbac.yaml
docs/: matrix.md
gitlab2rbac/: Chart.yaml  values.yaml
gitlab2rbac/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  serviceaccount.yaml
