[project]
name = "gitlab2rbac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gql>=3.5.3",
    "kubernetes>=33.1.0",
    "python-gitlab>=6.2.0",
    "slugify>=0.0.1",
]
[tool.black]
line-length = 79
include = '\.pyi?$'
[tool.commitizen]
name = "cz_conventional_commits"
changelog_start_rev = "1.1.0"
version_provider = 'pep621'
